# kate

./: .codecov.yml  .gitignore  CHANGELOG.md  CITATION.cff  COMPRESSORS.md  CONTRIBUTING.md  LICENSE  README.md  RELATED_WORK.txt  conftest.py  install_glide.sh  install_kate.sh  pyproject.toml  requirements.txt  run_kate.py
.github/workflows/: ci.yml
docs/: METHODS.md  REVIEW.md
examples/: README.md  demo_bound_loss.py  demo_epc.py  demo_glide.py  demo_kate.py  demo_kinetic_codec.py  demo_pathbound.py  demo_rd_train.py
kate/: __init__.py  __main__.py  artifact.py  baselines.py  benchmark.py  bound_loss.py  cli.py  codec.py  flow.py  inspect_traj.py  kinetic_codec.py  kinetics_deeptime.py  pathbound.py  predictive_coder.py  rd_train.py  runner.py  spline_flow.py  temporal_prior.py  vampnet_cv.py
src/epc/: __init__.py  __main__.py  artifact.py  baselines.py  benchmark.py  bound_loss.py  cli.py  codec.py  flow.py  inspect_traj.py  kinetic_codec.py  kinetics_deeptime.py  pathbound.py  predictive_coder.py  runner.py  spline_flow.py  temporal_prior.py  vampnet_cv.py
src/glide/: __init__.py  __main__.py  artifact.py  baselines.py  benchmark.py  bound_loss.py  cli.py  codec.py  flow.py  kinetic_codec.py  kinetics_deeptime.py  pathbound.py  predictive_coder.py  runner.py  spline_flow.py  temporal_prior.py  vampnet_cv.py
src/kate/: __init__.py  benchmark.py  cli.py  codec.py  inspect_traj.py  kinetics_deeptime.py  pathbound.py  runner.py  spline_flow.py
tests/: _synth.py  test_analyze.py  test_artifact.py  test_baselines.py  test_benchmark.py  test_bound_loss.py  test_cli.py  test_cli_smoke.py  test_codec.py  test_contacts.py  test_coverage_extra.py  test_coverage_extra2.py  test_deeptime.py  test_entrypoints.py  test_flow.py  test_fullatom.py  test_inspect_edges.py  test_inspect_full.py  test_inspect_time.py  test_inspect_traj.py  test_kinetic_codec.py  test_mfpt.py  test_no_eager_torch.py  test_package_api.py  test_pathbound.py  test_predictive_coder.py  test_rd_train.py  test_reference_agreement.py  test_resolution.py  test_rigor.py  test_robustness.py  test_spline_flow.py  test_steric.py  test_streaming.py  test_temporal_prior.py  test_vampnet_cv.py
