[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epc"
version = "0.1.0"
description = "Ensemble-Preserving Compression of MD trajectories, with a kinetic (path-distribution) fidelity bound"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anand Ojha", email = "anandojha.002@gmail.com" }]
keywords = [
    "molecular-dynamics", "compression", "markov-state-model",
    "normalizing-flow", "kinetics", "trajectory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core: enough to run `epc compress`, `epc decompress`, and `epc bound`.
# torch is core because the normalizing flow needs it.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "mdtraj>=1.9",
]

[project.optional-dependencies]
# Rigorous kinetics engine. Only `epc analyze`, `epc benchmark`, and the T6 VAMPnet
# path import deeptime; the guards raise `pip install epc[kinetics]` when absent.
kinetics = ["deeptime>=0.4.4", "matplotlib>=3.5"]
# Test tooling.
test = ["pytest>=7.0", "pytest-cov>=4.0"]
# Optional alternative spline-flow implementation for the T7 comparison.
nflows = ["nflows>=0.14"]

[project.scripts]
epc = "epc.cli:main"

[project.urls]
Homepage = "https://github.com/anandojha/epc"
Repository = "https://github.com/anandojha/epc"
Issues = "https://github.com/anandojha/epc/issues"
Changelog = "https://github.com/anandojha/epc/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
