[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kate"
version = "0.1.0"
description = "KATE (Kinetic-Aware Trajectory Encoder): kinetics-preserving compression of MD trajectories with a path-distribution fidelity bound"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anand Ojha", email = "anandojha.002@gmail.com" }]
keywords = [
    "molecular-dynamics", "compression", "markov-state-model",
    "normalizing-flow", "kinetics", "trajectory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core: enough to run `kate compress`, `kate decompress`, and `kate bound`.
# torch is core because the normalizing flow needs it.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "mdtraj>=1.9",
]

[project.optional-dependencies]
# Rigorous kinetics engine. Only `kate analyze`, `kate benchmark`, and the T6 VAMPnet
# path import deeptime; the guards raise `pip install kate[kinetics]` when absent.
kinetics = ["deeptime>=0.4.4", "matplotlib>=3.5"]
# Test tooling.
test = ["pytest>=7.0", "pytest-cov>=4.0"]
# Optional alternative spline-flow implementation for the T7 comparison.
nflows = ["nflows>=0.14"]

[project.scripts]
kate = "kate.cli:main"

[project.urls]
Homepage = "https://github.com/anandojha/kate"
Repository = "https://github.com/anandojha/kate"
Issues = "https://github.com/anandojha/kate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = [
    "src/kate/vampnet_cv.py",
]
